# voproshalych-v3

./: .gitignore  Makefile  README.md  docker-compose.yml
.ai/tasks/: plan.md
agent-service/: Dockerfile  pyproject.toml
agent-service/src/: config.py  graph.py  main.py  mcp_client.py  middleware.py  models.py  streaming.py  trace_logger.py
agent-service/src/nodes/: kb_workflow.py  meta.py  react.py  supervisor.py
agent-service/tests/: test_mcp_client.py  test_middleware.py  test_models.py  test_streaming.py  test_supervisor.py  test_trace_logger.py
bot-max/: main.go
bot-service/: .dockerignore  pyproject.toml
bot-service/bots/max/: Dockerfile  main.go
bot-service/bots/vk/: Dockerfile
bot-service/bots/vk/src/bot_vk/: bot.py
bot-service/core/: Dockerfile  pyproject.toml
bot-service/core/src/bot_core/: __init__.py  config.py  db.py  main.py  messages.py
bot-service/core/src/bot_core/models/: __init__.py  callback.py  message.py  response.py
bot-service/core/src/bot_core/services/: __init__.py  agent_client.py  bot_service.py  dialog_service.py  feedback_service.py  user_service.py
bot-vk/: pyproject.toml
bot-vk/src/bot_vk/: bot.py
db/: Dockerfile
db/migration/versions/: 005_chunks_title_length.py  006_chunks_source_url_length.py  007_drop_chunks_embeddings.py  008_qa_expanded_query_keywords.py  009_messages_feedback.py  010_dialog_context_fields.py  011_relevance_type.py  012_relevant_sources.py  013_backfill_unanswered_relevance.py  014_qa_source_links.py  015_admin_tasks.py  016_done_tasks_document_added.py  017_task_reports.py  018_admin_panel_hardening.py  019_add_kb_tables.py
db/postgres/: Dockerfile  README.md  init-extensions.sh
db/src/voproshalych_db/models/: __init__.py
docs/: AGENT_GRAPH.mmd  MVP_ARCHITECTURE_SIMPLE.mmd  MVP_GAPS_REPORT.md  TARGET_ARCHITECTURE_SIMPLE.mmd  models_report.md  v3_architecture.mmd  v3_architecture_LEGEND.mmd
docs/src/: MVP_ARCHITECTURE_LEGEND.mmd  MVP_ARCHITECTURE_SIMPLE.mmd
kb-service/: Dockerfile  pyproject.toml
kb-service/src/kb/: __init__.py  chunking.py  config.py  db.py  embedding.py  main.py  models.py  preprocessing.py  search.py  tools.py
kb-service/src/kb/parsers/: __init__.py  confluence_help.py  confluence_study.py  sveden.py  utmn.py  utmn_contacts.py  utmn_faq.py  utmn_news.py  web.py
kb-service/tests/: test_embedding.py  test_tools.py  test_utmn_news.py
litellm/: config.yaml
lobe-chat/: Dockerfile  consent.html  custom.js
mcp-servers/: Dockerfile.kb  Dockerfile.public  pyproject.toml
mcp-servers/src/kb/: qa_client.py  server.py
mcp-servers/src/public/: contacts_server.py  fetch_server.py  library_server.py  news_server.py  server.py  sveden_server.py
mcp-servers/tests/: test_fetch_server.py  test_kb_client.py  test_news_server.py
scripts/: clear_kb.py  crawl_confluence.py  crawl_confluence_host.sh  export_graph_mermaid.py  smoke_test.py  test.sh  test_curl.sh
