[project]
name = "voproshalych-bot-service"
version = "0.1.0"
description = "Unified bot service: core business logic and platform adapters."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
core = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
vk = [
    "vkbottle>=4.0",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
